--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,5 @@
 #################
-## Eclipse
-#################
-
-*.pydevproject
-.project
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# CDT-specific
-.cproject
-
-# PDT-specific
-.buildpath
-
-
-#################
-## Visual Studio
+## Visual Studio https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 #################
 
 ## Ignore Visual Studio temporary files, build results, and
@@ -42,8 +11,18 @@ local.properties
 *.sln.docstates
 
 # Build results
+
 [Dd]ebug/
 [Rr]elease/
+x64/
+build/
+[Bb]in/
+[Oo]bj/
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
 *_i.c
 *_p.c
 *.ilk
@@ -59,12 +38,14 @@ local.properties
 *.tli
 *.tlh
 *.tmp
+*.tmp_proj
+*.log
 *.vspscc
+*.vssscc
 .builds
-*.dotCover
-
-## TODO: If you have NuGet Package Restore enabled, uncomment this
-#packages/
+*.pidb
+*.log
+*.scc
 
 # Visual C++ cache files
 ipch/
@@ -72,16 +53,32 @@ ipch/
 *.ncb
 *.opensdf
 *.sdf
+*.cachefile
 
 # Visual Studio profiler
 *.psess
 *.vsp
+*.vspx
+
+# Guidance Automation Toolkit
+*.gpState
 
 # ReSharper is a .NET coding add-in
-_ReSharper*
+_ReSharper*/
+*.[Rr]e[Ss]harper
+
+# TeamCity is a build add-in
+_TeamCity*
+
+# DotCover is a Code Coverage Tool
+*.dotCover
+
+# NCrunch
+*.ncrunch*
+.*crunch*.local.xml
 
 # Installshield output folder
-[Ee]xpress
+[Ee]xpress/
 
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
@@ -94,44 +91,74 @@ DocProject/Help/Html2
 DocProject/Help/html
 
 # Click-Once directory
-publish
+publish/
+
+# Publish Web Output
+*.Publish.xml
+*.pubxml
+
+# NuGet Packages Directory
+## TODO: If you have NuGet Package Restore enabled, uncomment the next line
+#packages/
+
+# Windows Azure Build Output
+csx
+*.build.csdef
+
+# Windows Store app package directory
+AppPackages/
 
 # Others
-[Bb]in
-[Oo]bj
-sql
-TestResults
+sql/
 *.Cache
-ClientBin
-stylecop.*
+ClientBin/
+[Ss]tyle[Cc]op.*
 ~$*
+*~
 *.dbmdl
-Generated_Code #added for RIA/Silverlight projects
+*.[Pp]ublish.xml
+*.pfx
+*.publishsettings
+
+# RIA/Silverlight projects
+Generated_Code/
 
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+UpgradeLog*.htm
 
+# SQL Server files
+App_Data/*.mdf
+App_Data/*.ldf
 
-
-############
-## Windows
-############
+# =========================
+# Windows detritus
+# =========================
 
 # Windows image file caches
 Thumbs.db
+ehthumbs.db
 
 # Folder config file
 Desktop.ini
 
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Mac crap
+.DS_Store
 
 #############
-## Python
+## Python https://github.com/github/gitignore/blob/master/Python.gitignore
 #############
 
-*.py[co]
+*.py[cod]
+
+# C extensions
+*.so
 
 # Packages
 *.egg
@@ -145,6 +172,9 @@ var
 sdist
 develop-eggs
 .installed.cfg
+lib
+lib64
+__pycache__
 
 # Installer logs
 pip-log.txt
@@ -152,12 +182,39 @@ pip-log.txt
 # Unit test / coverage reports
 .coverage
 .tox
+nosetests.xml
 
-#Translations
+# Translations
 *.mo
 
-#Mr Developer
+# Mr Developer
 .mr.developer.cfg
+.project
+.pydevproject
 
-# Mac crap
-.DS_Store
+#############
+## SublimeText
+#############
+
+# Sublime Text 2 Project and Workspace Files 
+# for sublime text users
+*.sublime-project
+*.sublime-workspace
+
+#############
+## WordPress https://github.com/github/gitignore/blob/master/WordPress.gitignore
+#############
+
+.htaccess
+wp-config.php
+wp-content/uploads/
+wp-content/blogs.dir/
+wp-content/upgrade/
+wp-content/backup-db/
+wp-content/advanced-cache.php
+wp-content/wp-cache-config.php
+sitemap.xml
+*.log
+wp-content/cache/
+wp-content/backups/
+sitemap.xml.gz
