Add chrome-developer-tools submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fonts/source-sans-pro"]
 	path = fonts/source-sans-pro
 	url = git://github.com/adobe/source-sans-pro.git
+[submodule "themes/chrome-developer-tools"]
+	path = themes/source-sans-pro
+	url = git://github.com/simonowendesign/SO-Dark-Monokai-v3.git
