Updated git log alias colors

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 
 [alias]
 	g = grep --break --heading --line-number
-	l = log --abbrev-commit --graph -n 20 --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+	l = log --abbrev-commit --graph -n 20 --pretty=format:'%Cgreen(%cr) %C(magenta)%h%Creset %C(cyan)%d%Creset %s %C(yellow)<%an>%Creset'
 
 [core]
 	editor = 'c:/program files/sublime text 2/sublime_text.exe' -w
