--- a/macosx/.colorsvnrc
+++ b/macosx/.colorsvnrc
@@ -3,7 +3,8 @@
 # These are the defaults
 
 # path to the svn binary
-svn: /usr/local/Library/ENV/4.3/svn 
+# Use the Homebrew installed svn binary, see https://github.com/Homebrew/homebrew/issues/49001
+svn: /usr/local/bin/svn
 
 # Don't do color if our terminal type ($TERM) is one of these.
 # (List all terminal types on one line, seperated by whitespace.)
