Update root `.editorconfig` file

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,6 @@
 # This file is for unifying the coding style for different editors and IDEs
 # editorconfig.org
 
-# WordPress Coding Standards
-# https://make.wordpress.org/core/handbook/coding-standards/
-
 root = true
 
 [*]
@@ -13,32 +10,13 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
 
-[{.jshintrc,*.json,*.yml}]
+[{*.fish,*.py}]
 indent_style = space
-indent_size = 2
-
-[{*.txt,wp-config-sample.php}]
-end_of_line = crlf
-
-# Non-WordPress rules
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
 
-[Dockerfile]
-indent_size = 2
-
-# Fish
-[*.fish]
-indent_style = space
-indent_size = 4
-
-# Nginx
-[nginx.conf]
+[*.yml]
 indent_style = space
 indent_size = 2
-
-# Python
-[*.py]
-indent_style = space
-indent_size = 4
