Add `st`, `ci`, `co` Git aliases to `.gitconfig`

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,9 @@
 
 [alias]
 	g = grep --break --heading --line-number
+	st = status
+	ci = commit
+	co = checkout
 	l = log --abbrev-commit --graph -n 20 --all --format=format:'%C(magenta)%h%C(reset) - %C(bold green)(%cr)%C(reset) %C(white)%s%C(reset) %C(yellow)- %cn%C(reset)%C(bold red)%d%C(reset)'
 
 [core]
