--- a/.composer/composer.json
+++ b/.composer/composer.json
@@ -1,17 +1,11 @@
 {
-    "require": {
-        "phpdocumentor/phpdocumentor": "2.*",
-        "phpmd/phpmd" : "@stable",
-        "phpunit/php-text-template": "1.2.*",
-        "phpunit/phpcov": "*",
-        "phpunit/phpunit": "4.2.*",
-        "phpunit/phpunit-skeleton-generator": "*",
-        "psy/psysh": "@stable",
-        "sebastian/hhvm-wrapper": "2.0",
-        "sebastian/phpcpd": "*",
-        "sebastian/phpdcd": "*",
-        "squizlabs/php_codesniffer": "*",
-        "wp-cli/wp-cli": "*",
-        "wp-coding-standards/wpcs": "dev-master"
-    }
+	"require": {
+		"humanmade/coding-standards": "^1.2",
+		"wp-coding-standards/wpcs": "^2.3"
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	}
 }
